# shipper

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  build.rs  rustfmt.toml
build_tools/inline_source/: index.js  package-lock.json  package.json
bundle_artifacts/MacOS/: info.plist
lib/html_embed/: Cargo.toml  build.rs
lib/html_embed/src/: lib.rs
lib/html_embed/src/resources/html/confirm/: index.css  index.html  index.js  sora.css
lib/html_embed/src/resources/html/updaterui/: index.css  index.html  sora.css
lib/html_embed/src/resources/html/updaterui/js/: _test_var.js  index.js  sektor.js  test_lib.js  util.js
lib/licensor/: Cargo.toml  build.rs
lib/licensor/src/: lib.rs
lib/licensor/src/licensor/: index.js  licenses.js
lib/pakkly_error/: Cargo.toml
lib/pakkly_error/src/: lib.rs
lib/windows_interface/: Cargo.toml  build.rs
lib/windows_interface/src/: lib.rs
lib/windows_interface/src/windows_lib/: winapi_tools.cpp
mocker/testbinary/: Cargo.toml  build.rs  data.rc
mocker/testbinary/bundle_artifacts/MacOS/: info.plist
mocker/testbinary/scripts/: mkapp_mac.sh
mocker/testbinary/src/: main.rs
src/: common.rs  defines.rs  fslog.rs  installer.rs  installer_tools.rs  ipc.rs  logger.rs  main.rs  paths.rs  remoteinstallerdata.rs  shipper.rs  shipperfile.rs  uninstaller.rs  unzip.rs  webview.rs  webview_alert.rs
src/os_spec/: linux.rs  mac.rs  mod.rs
